[gd_scene load_steps=31 format=3 uid="uid://jq4q21c6lu41"]

[ext_resource type="PackedScene" uid="uid://dogbp26pm05oa" path="res://levels/base_level.tscn" id="1_tsytb"]
[ext_resource type="Script" path="res://levels/test_chamber_3.gd" id="2_mg6kg"]
[ext_resource type="PackedScene" uid="uid://cuy5bn2r2h4ac" path="res://components/toggleable_door.tscn" id="2_tm1an"]
[ext_resource type="MeshLibrary" uid="uid://be70tshjipimj" path="res://assets/mesh_library/resources/arcade_library_floor.tres" id="3_bicmf"]
[ext_resource type="Script" path="res://src/resources/level_dialogue.gd" id="3_wflg0"]
[ext_resource type="PackedScene" uid="uid://c3ynpa4pb482k" path="res://components/scale.tscn" id="3_y8jqs"]
[ext_resource type="Resource" path="res://dialogue/timelines/prison_1.dtl" id="4_1xvr0"]
[ext_resource type="PackedScene" uid="uid://ci5t2iq0okvpv" path="res://components/scales_steps.tscn" id="4_q52mh"]
[ext_resource type="PackedScene" uid="uid://523c22o0f8cc" path="res://components/lamp.tscn" id="5_0wg51"]
[ext_resource type="Texture2D" uid="uid://c0gmux736h0yx" path="res://assets/The Administrator.png" id="5_f1elj"]
[ext_resource type="Resource" uid="uid://cp3elkn41qhdn" path="res://items/data/Adminy.tres" id="5_mek2h"]
[ext_resource type="Resource" path="res://dialogue/timelines/prison_2.dtl" id="5_xjudi"]
[ext_resource type="Resource" path="res://dialogue/timelines/prison_3.dtl" id="6_op4i7"]
[ext_resource type="Resource" path="res://dialogue/timelines/prison_4.dtl" id="7_wc5oy"]
[ext_resource type="PackedScene" uid="uid://dme1qovut5fue" path="res://components/item_generator.tscn" id="10_di5vg"]
[ext_resource type="PackedScene" uid="uid://dgqyioiw36j8c" path="res://components/player_detection_area.tscn" id="11_545bi"]

[sub_resource type="Resource" id="Resource_3ykm5"]
script = ExtResource("3_wflg0")
label = "prison_1"
timeline = ExtResource("4_1xvr0")
one_shot = true
pause_game = true

[sub_resource type="Resource" id="Resource_nkwn3"]
script = ExtResource("3_wflg0")
label = "prison_2"
timeline = ExtResource("5_xjudi")
one_shot = true
pause_game = true

[sub_resource type="Resource" id="Resource_465ui"]
script = ExtResource("3_wflg0")
label = "prison_3"
timeline = ExtResource("6_op4i7")
one_shot = true
pause_game = true

[sub_resource type="Resource" id="Resource_y8w4p"]
script = ExtResource("3_wflg0")
label = "prison_4"
timeline = ExtResource("7_wc5oy")
one_shot = true
pause_game = true

[sub_resource type="BoxShape3D" id="BoxShape3D_33m13"]
size = Vector3(10.0604, 1, 19)

[sub_resource type="BoxShape3D" id="BoxShape3D_t80y6"]
size = Vector3(1.54199, 1.35339, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_43d7d"]
size = Vector3(0.637573, 4, 9)

[sub_resource type="BoxShape3D" id="BoxShape3D_7t6oh"]
size = Vector3(1.62898, 8.37294, 9.88649)

[sub_resource type="Animation" id="Animation_c1gqn"]
resource_name = "admin_escape"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AdminSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AdminSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.133333, 0.433333, 0.5, 0.533333, 0.6, 0.666667, 0.7, 0.766667, 0.833333, 0.933333, 1, 1.06667, 1.43333, 1.73333, 1.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(9.245, -1.657, 1.08), Vector3(8.91865, -2.10261, 2.43017), Vector3(8.919, -2.578, 2.43), Vector3(7.83, -2.578, 6.93), Vector3(7.7161, -1.89597, 6.93036), Vector3(6.9444, -1.79265, 6.93036), Vector3(6.944, -1.222, 6.93), Vector3(5.97199, -1.22156, 6.93036), Vector3(5.97199, -1.22156, 6.93036), Vector3(5.972, -0.545, 6.93), Vector3(5.537, -0.545, 6.93), Vector3(4.207, 0.413, 6.93), Vector3(3.11405, 0.413394, 6.93036), Vector3(3.11405, 0.413394, 6.93036), Vector3(-2.56592, 0.413394, -2.41717), Vector3(-2.56592, 0.413394, -7.97107), Vector3(-0.0988355, -6.53585, -7.97107)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AdminSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.133333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_eayip"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AdminSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AdminSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(9.24534, -2.10261, 1.08011)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AdminSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Scale/CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.25, -1.83609)]
}

[sub_resource type="Animation" id="Animation_ux0e3"]
resource_name = "raise_glass"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scale/CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.25, -1.83609), Vector3(1.19209e-07, 18.8908, -1.83609)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q7ln2"]
_data = {
"RESET": SubResource("Animation_eayip"),
"admin_escape": SubResource("Animation_c1gqn"),
"raise_glass": SubResource("Animation_ux0e3")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_xqe2o"]
size = Vector3(1, 2.62061, 15.3214)

[sub_resource type="BoxShape3D" id="BoxShape3D_jm4sc"]
size = Vector3(8.70105, 3.11243, 5.06299)

[node name="World" instance=ExtResource("1_tsytb")]
script = ExtResource("2_mg6kg")

[node name="PlayerSpawnPoint" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.65674, 0.512096, 0.309834)

[node name="LevelDialogueManager" parent="." index="4"]
dialogue = Array[ExtResource("3_wflg0")]([SubResource("Resource_3ykm5"), SubResource("Resource_nkwn3"), SubResource("Resource_465ui"), SubResource("Resource_y8w4p")])

[node name="MeshInstance3D" parent="Floor" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.06978, 0)

[node name="CollisionShape3D" parent="Floor" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.46979, -0.493286, 3)
shape = SubResource("BoxShape3D_33m13")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Floor" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.03918, -0.493286, -12.1512)
shape = SubResource("BoxShape3D_33m13")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Floor" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.03918, -3.47194, 4.16821)
shape = SubResource("BoxShape3D_33m13")

[node name="LoadNextLevelZone" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.51168, 0, -5.42004)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LoadNextLevelZone" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00244141, 0.592844, 0)
shape = SubResource("BoxShape3D_t80y6")

[node name="WallsGridMap" parent="." index="8"]
data = {
"cells": PackedInt32Array(65530, 65531, 1048577, 65531, 65531, 3, 65534, 65531, 2, 65535, 65531, 3, 0, 65531, 3, 1, 65531, 3, 65530, 65532, 1048579, 65530, 65533, 1048579, 65530, 65534, 1048579, 65530, 65535, 1048579, 65530, 0, 1048579, 65530, 1, 1048579, 65530, 2, 1048579, 196603, 65531, 3, 196604, 65531, 3, 196605, 65531, 3, 196606, 65531, 3, 196607, 65531, 3, 131072, 65531, 3, 131073, 65531, 3, 458747, 65531, 131075, 458748, 65531, 131075, 458749, 65531, 131075, 458750, 65531, 131075, 458751, 65531, 131075, 393216, 65531, 131075, 393217, 65531, 131075, 458746, 65532, 1310723, 458746, 65533, 1310723, 458746, 65534, 1310723, 458746, 65535, 1310723, 458746, 0, 1310723, 458746, 1, 1310723, 458746, 2, 1310723, 196602, 65535, 1048579, 196602, 65534, 1048579, 196602, 65533, 1048579, 196602, 65532, 1048579, 196602, 0, 1048579, 196602, 1, 1048579, 196602, 2, 1048579, 196602, 65531, 1048577, 458746, 65531, 131073, 65532, 65531, 2, 65530, 3, 1048579, 65530, 4, 1048579, 65530, 5, 1048579, 65530, 6, 1048579, 65530, 7, 1048579, 11, 65534, 1441795, 11, 65535, 1441795, 11, 0, 1441795, 11, 1, 1441795, 11, 2, 1441795, 11, 3, 1441795, 11, 4, 1441795, 11, 5, 1441795, 11, 6, 1441795, 11, 7, 1441795, 11, 8, 1441795, 65530, 8, 1048579, 65530, 9, 1048579, 65531, 10, 655363, 65532, 10, 655363, 65533, 10, 655363, 65534, 10, 655363, 65535, 10, 655363, 0, 10, 655363, 1, 10, 655363, 2, 10, 655363, 3, 10, 655363, 11, 9, 1441795, 11, 10, 1441793, 65530, 10, 655361, 196602, 10, 655361, 131083, 10, 1441793, 131083, 3, 1441795, 131083, 4, 1441795, 131083, 5, 1441795, 131083, 6, 1441795, 131083, 7, 1441795, 131083, 8, 1441795, 131083, 9, 1441795, 131083, 2, 1441795, 131083, 1, 1441795, 131083, 0, 1441795, 131083, 65535, 1441795, 131083, 65534, 1441795, 131083, 65533, 1441795, 131083, 65532, 1441795, 196602, 3, 1048579, 196602, 4, 1048579, 196602, 5, 1048579, 196602, 6, 1048579, 196602, 7, 1048579, 196602, 8, 1048579, 196602, 9, 1048579, 458746, 3, 1310723, 458746, 4, 1310723, 458746, 5, 1310723, 458746, 6, 1310723, 458746, 7, 1310723, 458746, 8, 1310723, 458746, 9, 1310723, 458746, 10, 1310721, 393227, 10, 524289, 393227, 9, 1179651, 393227, 8, 1179651, 393227, 7, 1179651, 393227, 6, 1179651, 393227, 5, 1179651, 393227, 4, 1179651, 393227, 3, 1179651, 393227, 2, 1179651, 393227, 1, 1179651, 393227, 0, 1179651, 393227, 65535, 1179651, 393227, 65534, 1179651, 393227, 65533, 1179651, 393227, 65532, 1179651, 131075, 10, 655363, 131074, 10, 655363, 131073, 10, 655363, 131072, 10, 655363, 196607, 10, 655363, 196606, 10, 655363, 196605, 10, 655363, 196604, 10, 655363, 196603, 10, 655363, 393218, 65531, 524289, 2, 65531, 1441793, 131074, 65531, 1441793, 11, 65530, 1441795, 11, 65529, 1441795, 11, 65528, 1441795, 11, 65526, 1, 2, 65526, 1048577, 131074, 65526, 1048577, 131083, 65526, 1, 393227, 65526, 1179649, 393218, 65526, 131073, 3, 65526, 3, 4, 65526, 3, 5, 65526, 3, 6, 65526, 3, 7, 65526, 3, 8, 65526, 3, 9, 65526, 3, 10, 65526, 3, 2, 65527, 1048579, 2, 65528, 1048579, 2, 65529, 1048579, 2, 65530, 1048579, 393218, 65530, 1310723, 393218, 65529, 1310723, 393218, 65528, 1310723, 393218, 65527, 1310723, 393219, 65526, 131075, 393220, 65526, 131075, 393221, 65526, 131075, 393222, 65526, 131075, 393223, 65526, 131075, 393224, 65526, 131075, 393225, 65526, 131075, 393226, 65526, 131075, 393227, 65527, 1179651, 393227, 65528, 1179651, 393227, 65529, 1179651, 393227, 65530, 1179651, 393227, 65531, 1179651, 11, 65527, 1441795, 131083, 65527, 1441795, 131083, 65528, 1441795, 131083, 65529, 1441795, 131083, 65530, 1441795, 131083, 65531, 1441795, 131074, 65527, 1048579, 131074, 65528, 1048579, 131074, 65529, 1048579, 131074, 65530, 1048579, 131075, 65526, 3, 131076, 65526, 3, 131077, 65526, 3, 131078, 65526, 3, 131079, 65526, 3, 131080, 65526, 3, 131081, 65526, 3, 131082, 65526, 3, -131069, 1, 1048579, -131069, 2, 1048579, -131069, 3, 1048579, -131069, 4, 1048579, -131069, 5, 1048579, -131069, 9, 655361, -131069, 8, 1048579, -131069, 7, 1048579, -131069, 6, 1048579, -262141, 9, 655361, -262141, 8, 1048579, -262141, 7, 1048579, -262141, 6, 1048579, -262141, 5, 1048579, -262141, 4, 1048579, -262141, 3, 1048579, -262141, 2, 1048579, -262141, 1, 1048579, -393213, 1, 1048579, -393213, 2, 1048579, -393213, 3, 1048579, -393213, 4, 1048579, -393213, 5, 1048579, -393213, 6, 1048579, -393213, 7, 1048579, -393213, 8, 1048579, -393213, 9, 655361, -393213, 65533, 3, -393212, 65533, 3, -393211, 65533, 3, -393210, 65533, 3, -393209, 65533, 3, -393208, 65533, 3, -393207, 65533, 3, -393206, 65533, 3, -393205, 65533, 1, -393213, 65534, 1048579, -393213, 65535, 1048579, -393213, 0, 1048579, -262141, 65534, 1048579, -262141, 65535, 1048579, -262141, 0, 1048579, -262141, 65533, 3, -262140, 65533, 3, -262139, 65533, 3, -262138, 65533, 3, -262137, 65533, 3, -262136, 65533, 3, -262135, 65533, 3, -262134, 65533, 3, -262133, 65533, 1, -131069, 65533, 3, -131068, 65533, 3, -131067, 65533, 3, -131066, 65533, 3, -131065, 65533, 3, -131064, 65533, 3, -131063, 65533, 3, -131062, 65533, 3, -131061, 65533, 1, -131069, 65535, 1048579, -131069, 0, 1048579, -131069, 65534, 1048579, -393212, 9, 3, -393211, 9, 3, -393210, 9, 3, -393209, 9, 3, -393208, 9, 3, -393207, 9, 3, -393206, 9, 3, -131061, 65535, 1441795, -131061, 0, 1441795, -131061, 1, 1441795, -131061, 2, 1441795, -131061, 3, 1441795, -131061, 4, 1441795, -131061, 5, 1441795, -131061, 6, 1441795, -131061, 7, 1441795, -131061, 8, 1441795, -131061, 9, 1441793, -262133, 9, 1441793, -262133, 8, 1441795, -262133, 65534, 1441795, -262133, 65535, 1441795, -262133, 0, 1441795, -262133, 1, 1441795, -262133, 2, 1441795, -262133, 3, 1441795, -262133, 4, 1441795, -262133, 5, 1441795, -262133, 6, 1441795, -262133, 7, 1441795, -131061, 65534, 1441795, -393205, 9, 1441793, -393205, 8, 1441795, -393205, 7, 1441795, -393205, 6, 1441795, -393205, 5, 1441795, -393205, 4, 1441795, -393205, 3, 1441795, -393205, 2, 1441795, -393205, 1, 1441795, -393205, 0, 1441795, -393205, 65535, 1441795, -393205, 65534, 1441795, 11, 65533, 1441795, 11, 65531, 1441795, 11, 65532, 1441795)
}

[node name="FloorGridMap" parent="." index="9"]
data = {
"cells": PackedInt32Array(-1638404, 0, 1441792, -1572867, 0, 1441792, -1507330, 0, 1441792, -1507329, 0, 1441792, -1441793, 0, 1441792, -1507328, 0, 1441792, -1441792, 0, 1441792, -1441791, 0, 1441792, -1376255, 0, 1441792, -1310718, 0, 1441792, -1245181, 0, 1441792, -1179645, 0, 1441792, -1179644, 0, 1441792, -1114108, 0, 1441792, -1048572, 0, 1441792, -1048571, 0, 1441792, -983035, 0, 1441792, 42, 65520, 131072, 41, 65520, 131072, 65529, 65529, 0, 65529, 65530, 0, 65529, 65531, 0, 65529, 65532, 0, 65529, 65533, 0, 65529, 65534, 0, 65529, 65535, 0, 65529, 0, 0, 65529, 1, 0, 65529, 2, 0, 65529, 3, 0, 65529, 4, 0, 65529, 5, 0, 65529, 6, 0, 65529, 7, 0, 65529, 8, 0, 65529, 9, 0, 65529, 10, 0, 65530, 65529, 0, 65530, 65530, 0, 65530, 65531, 0, 65530, 65532, 0, 65530, 65533, 0, 65530, 65534, 0, 65530, 65535, 0, 65530, 0, 0, 65530, 1, 0, 65530, 2, 0, 65530, 3, 0, 65530, 4, 0, 65530, 5, 0, 65530, 6, 0, 65530, 7, 0, 65530, 8, 0, 65530, 9, 0, 65530, 10, 0, 65531, 65529, 0, 65531, 65530, 0, 65531, 65531, 0, 65531, 65532, 0, 65531, 65533, 0, 65531, 65534, 0, 65531, 65535, 0, 65531, 0, 0, 65531, 1, 0, 65531, 2, 0, 65531, 3, 0, 65531, 4, 0, 65531, 5, 0, 65531, 6, 0, 65531, 7, 0, 65531, 8, 0, 65531, 9, 0, 65531, 10, 0, 65532, 65529, 0, 65532, 65530, 0, 65532, 65531, 0, 65532, 65532, 0, 65532, 65533, 0, 65532, 65534, 0, 65532, 65535, 0, 65532, 0, 0, 65532, 1, 0, 65532, 2, 0, 65532, 3, 0, 65532, 4, 0, 65532, 5, 0, 65532, 6, 0, 65532, 7, 0, 65532, 8, 0, 65532, 9, 0, 65532, 10, 0, 65533, 65529, 0, 65533, 65530, 0, 65533, 65531, 0, 65533, 65532, 0, 65533, 65533, 0, 65533, 65534, 0, 65533, 65535, 0, 65533, 0, 0, 65533, 1, 0, 65533, 2, 0, 65533, 3, 0, 65533, 4, 0, 65533, 5, 0, 65533, 6, 0, 65533, 7, 0, 65533, 8, 0, 65533, 9, 0, 65533, 10, 0, 65534, 65529, 0, 65534, 65530, 0, 65534, 65531, 0, 65534, 65532, 0, 65534, 65533, 0, 65534, 65534, 0, 65534, 65535, 0, 65534, 0, 0, 65534, 1, 0, 65534, 2, 0, 65534, 3, 0, 65534, 4, 0, 65534, 5, 0, 65534, 6, 0, 65534, 7, 0, 65534, 8, 0, 65534, 9, 0, 65534, 10, 0, 65535, 65529, 0, 65535, 65530, 0, 65535, 65531, 0, 65535, 65532, 0, 65535, 65533, 0, 65535, 65534, 0, 65535, 65535, 0, 65535, 0, 0, 65535, 1, 0, 65535, 2, 0, 65535, 3, 0, 65535, 4, 0, 65535, 5, 0, 65535, 6, 0, 65535, 7, 0, 65535, 8, 0, 65535, 9, 0, 65535, 10, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 2, 65529, 655360, 2, 65530, 655360, 2, 65531, 655360, 2, 65532, 655360, 2, 65533, 655360, 2, 65534, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 2, 10, 0, -393209, 2, 0, -393210, 2, 0, -393210, 1, 0, -393210, 0, 0, -393210, 65535, 0, -393210, 65534, 0, -393209, 65534, 0, -393209, 65535, 0, -393209, 0, 0, -393209, 1, 0, -393208, 65535, 0, -393208, 0, 0, -393208, 1, 0, -393208, 2, 0, -393213, 65533, 0, -393213, 65534, 0, -393213, 65535, 0, -393213, 0, 0, -393213, 1, 0, -393213, 2, 0, -393213, 3, 0, -393213, 4, 0, -393213, 5, 0, -393213, 6, 0, -393213, 7, 0, -393213, 8, 0, -393213, 9, 0, -393212, 65533, 0, -393212, 65534, 0, -393212, 65535, 0, -393212, 0, 0, -393212, 1, 0, -393212, 2, 0, -393212, 3, 0, -393212, 4, 0, -393212, 5, 0, -393212, 6, 0, -393212, 7, 0, -393212, 8, 0, -393212, 9, 0, -393211, 65533, 0, -393211, 65534, 0, -393211, 65535, 0, -393211, 0, 0, -393211, 1, 0, -393211, 2, 0, -393211, 3, 0, -393211, 4, 0, -393211, 5, 0, -393211, 6, 0, -393211, 7, 0, -393211, 8, 0, -393211, 9, 0, -393210, 65533, 0, -393210, 3, 0, -393210, 4, 0, -393210, 5, 0, -393210, 6, 0, -393210, 7, 0, -393210, 8, 0, -393210, 9, 0, -393209, 65533, 0, -393209, 3, 0, -393209, 4, 0, -393209, 5, 0, -393209, 6, 0, -393209, 7, 0, -393209, 8, 0, -393209, 9, 0, -393208, 65533, 0, -393208, 65534, 0, -393208, 3, 0, -393208, 4, 0, -393208, 5, 0, -393208, 6, 0, -393208, 7, 0, -393208, 8, 0, -393208, 9, 0, -393207, 65533, 0, -393207, 65534, 0, -393207, 65535, 0, -393207, 0, 0, -393207, 1, 0, -393207, 2, 0, -393207, 3, 0, -393207, 4, 0, -393207, 5, 0, -393207, 6, 0, -393207, 7, 0, -393207, 8, 0, -393207, 9, 0, -393206, 65533, 0, -393206, 65534, 0, -393206, 65535, 0, -393206, 0, 0, -393206, 1, 0, -393206, 2, 0, -393206, 3, 0, -393206, 4, 0, -393206, 5, 0, -393206, 6, 0, -393206, 7, 0, -393206, 8, 0, -393206, 9, 0, -393205, 65533, 0, -393205, 65534, 0, -393205, 65535, 0, -393205, 0, 0, -393205, 1, 0, -393205, 2, 0, -393205, 3, 0, -393205, 4, 0, -393205, 5, 0, -393205, 6, 0, -393205, 7, 0, -393205, 8, 0, -393205, 9, 0, 3, 65526, 655360, 3, 65527, 655360, 3, 65528, 655360, 3, 65529, 655360, 3, 65530, 655360, 3, 65531, 655360, 3, 65532, 655360, 4, 65526, 655360, 4, 65527, 655360, 4, 65528, 655360, 4, 65529, 655360, 4, 65530, 655360, 4, 65531, 655360, 4, 65532, 655360, 5, 65526, 655360, 5, 65527, 655360, 5, 65528, 655360, 5, 65529, 655360, 5, 65530, 655360, 5, 65531, 655360, 5, 65532, 655360, 6, 65526, 655360, 6, 65527, 655360, 6, 65528, 655360, 6, 65529, 655360, 6, 65530, 655360, 6, 65531, 655360, 6, 65532, 655360, 7, 65526, 655360, 7, 65527, 655360, 7, 65528, 655360, 7, 65529, 655360, 7, 65530, 655360, 7, 65531, 655360, 7, 65532, 655360, 8, 65526, 655360, 8, 65527, 655360, 8, 65528, 655360, 8, 65529, 655360, 8, 65530, 655360, 8, 65531, 655360, 8, 65532, 655360, 9, 65526, 655360, 9, 65527, 655360, 9, 65528, 655360, 9, 65529, 655360, 9, 65530, 655360, 9, 65531, 655360, 9, 65532, 655360, 10, 65526, 655360, 10, 65527, 655360, 10, 65528, 655360, 10, 65529, 655360, 10, 65530, 655360, 10, 65531, 655360, 10, 65532, 655360, 2, 65526, 655360, 2, 65527, 655360, 2, 65528, 655360, 11, 65526, 655360, 11, 65527, 655360, 11, 65528, 655360, 11, 65529, 655360, 11, 65530, 655360, 11, 65531, 655360, 11, 65532, 655360, 12, 65526, 655360, 12, 65527, 655360, 12, 65528, 655360, 12, 65529, 655360, 12, 65530, 655360, 12, 65531, 655360, 12, 65532, 655360, 12, 65533, 655360, 13, 65526, 655360, 13, 65527, 655360, 13, 65528, 655360, 13, 65529, 655360, 13, 65530, 655360, 13, 65531, 655360, 13, 65532, 655360, 13, 65533, 655360, 11, 65533, 655360)
}

[node name="FloorGridMap2" type="GridMap" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.002, 0)
mesh_library = ExtResource("3_bicmf")
cell_size = Vector3(1, 0.5, 1)
cell_center_y = false
collision_layer = 9
data = {
"cells": PackedInt32Array(-1638404, 0, 1441792, -1572867, 0, 1441792, -1507330, 0, 1441792, -1507329, 0, 1441792, -1441793, 0, 1441792, -1507328, 0, 1441792, -1441792, 0, 1441792, -1441791, 0, 1441792, -1376255, 0, 1441792, -1310718, 0, 1441792, -1245181, 0, 1441792, -1179645, 0, 1441792, -1179644, 0, 1441792, -1114108, 0, 1441792, -1048572, 0, 1441792, -1048571, 0, 1441792, -983035, 0, 1441792, 42, 65520, 131072, 41, 65520, 131072, -393209, 2, 0, -393210, 2, 0, -393210, 1, 0, -393210, 0, 0, -393210, 65535, 0, -393210, 65534, 0, -393209, 65534, 0, -393209, 65535, 0, -393209, 0, 0, -393209, 1, 0, -393208, 65535, 0, -393208, 0, 0, -393208, 1, 0, -393208, 2, 0, -393213, 65533, 0, -393213, 65534, 0, -393213, 65535, 0, -393213, 0, 0, -393213, 1, 0, -393213, 2, 0, -393213, 3, 0, -393213, 4, 0, -393213, 5, 0, -393213, 6, 0, -393213, 7, 0, -393213, 8, 0, -393213, 9, 0, -393212, 65533, 0, -393212, 65534, 0, -393212, 65535, 0, -393212, 0, 0, -393212, 1, 0, -393212, 2, 0, -393212, 3, 0, -393212, 4, 0, -393212, 5, 0, -393212, 6, 0, -393212, 7, 0, -393212, 8, 0, -393212, 9, 0, -393211, 65533, 0, -393211, 65534, 0, -393211, 65535, 0, -393211, 0, 0, -393211, 1, 0, -393211, 2, 0, -393211, 3, 0, -393211, 4, 0, -393211, 5, 0, -393211, 6, 0, -393211, 7, 0, -393211, 8, 0, -393211, 9, 0, -393210, 65533, 0, -393210, 3, 0, -393210, 4, 0, -393210, 5, 0, -393210, 6, 0, -393210, 7, 0, -393210, 8, 0, -393210, 9, 0, -393209, 65533, 0, -393209, 3, 0, -393209, 4, 0, -393209, 5, 0, -393209, 6, 0, -393209, 7, 0, -393209, 8, 0, -393209, 9, 0, -393208, 65533, 0, -393208, 65534, 0, -393208, 3, 0, -393208, 4, 0, -393208, 5, 0, -393208, 6, 0, -393208, 7, 0, -393208, 8, 0, -393208, 9, 0, -393207, 65533, 0, -393207, 65534, 0, -393207, 65535, 0, -393207, 0, 0, -393207, 1, 0, -393207, 2, 0, -393207, 3, 0, -393207, 4, 0, -393207, 5, 0, -393207, 6, 0, -393207, 7, 0, -393207, 8, 0, -393207, 9, 0, -393206, 65533, 0, -393206, 65534, 0, -393206, 65535, 0, -393206, 0, 0, -393206, 1, 0, -393206, 2, 0, -393206, 3, 0, -393206, 4, 0, -393206, 5, 0, -393206, 6, 0, -393206, 7, 0, -393206, 8, 0, -393206, 9, 0, -393205, 65533, 0, -393205, 65534, 0, -393205, 65535, 0, -393205, 0, 0, -393205, 1, 0, -393205, 2, 0, -393205, 3, 0, -393205, 4, 0, -393205, 5, 0, -393205, 6, 0, -393205, 7, 0, -393205, 8, 0, -393205, 9, 0, 3, 10, 1441792, 3, 9, 1441792, 3, 8, 1441792, 3, 7, 1441792, 3, 6, 1441792, 3, 5, 1441792, 3, 4, 1441792, 3, 3, 1441792, 3, 2, 1441792, 3, 1, 1441792, 3, 0, 1441792, 3, 65535, 1441792, 3, 65534, 1441792, 3, 65533, 1441792, 4, 65533, 1441792, 5, 65533, 1441792, 6, 65533, 1441792, 7, 65533, 1441792, 8, 65533, 1441792, 9, 65533, 1441792, 10, 65533, 1441792, 11, 65533, 1441792)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="ToggleableDoor" parent="." index="11" instance=ExtResource("2_tm1an")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -4.5)

[node name="AdminSprite" type="Sprite3D" parent="." index="12"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.24534, -2.10261, 1.08011)
flip_h = true
pixel_size = 0.0017
billboard = 1
texture = ExtResource("5_f1elj")

[node name="Scale" parent="." index="13" instance=ExtResource("3_y8jqs")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.40334, -3, 1.08011)
test_item = ExtResource("5_mek2h")

[node name="LeftDishCollisionShape" parent="Scale" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.646562, 1.84235)

[node name="InvisibleWalls" type="StaticBody3D" parent="." index="14"]
metadata/_edit_lock_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="InvisibleWalls" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8.34491, -1.48283, 9.67281)
shape = SubResource("BoxShape3D_43d7d")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="InvisibleWalls" index="1"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.48941, 0.0744888, 10.0643)
shape = SubResource("BoxShape3D_7t6oh")

[node name="ScalesSteps" parent="." index="15" instance=ExtResource("4_q52mh")]
transform = Transform3D(-7.67135e-08, 0, 1.755, 0, 1.755, 0, -1.755, 0, -7.67135e-08, 5.8002, -3, 6.87152)

[node name="Lamp" parent="." index="16" instance=ExtResource("5_0wg51")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1.559, -4.19266)

[node name="ItemGenerator" parent="." index="17" instance=ExtResource("10_di5vg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.86092, 0, -7.38208)
anvil_mode = true

[node name="ScalesSteps2" parent="." index="18" instance=ExtResource("4_q52mh")]
transform = Transform3D(-1, 8.74228e-08, 1.67415e-07, -8.74228e-08, -1, 1.67415e-07, 8.74228e-08, 8.74228e-08, 1.915, 5.42222, -0.0361042, -1.58142)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="19"]
libraries = {
"": SubResource("AnimationLibrary_q7ln2")
}
speed_scale = 0.5

[node name="FirstPlayerDetectionArea" parent="." index="20" instance=ExtResource("11_545bi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38195, 0, 2.25618)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FirstPlayerDetectionArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.810303, 0.582611)
shape = SubResource("BoxShape3D_xqe2o")

[node name="AnvilSightingDetectionArea" parent="." index="21" instance=ExtResource("11_545bi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.08189, 0.583416, -5.26235)

[node name="CollisionShape3D" type="CollisionShape3D" parent="AnvilSightingDetectionArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12445, 0.843068, -2.03149)
shape = SubResource("BoxShape3D_jm4sc")

[connection signal="scale_invalid" from="Scale" to="ToggleableDoor" method="close"]
[connection signal="scale_invalid" from="Scale" to="Lamp" method="turn_off"]
[connection signal="scale_valid" from="Scale" to="." method="_on_scale_scale_valid"]
[connection signal="scale_valid" from="Scale" to="ToggleableDoor" method="open"]
[connection signal="scale_valid" from="Scale" to="Lamp" method="turn_on"]
[connection signal="player_entered" from="FirstPlayerDetectionArea" to="." method="_on_first_player_detection_area_player_entered"]
[connection signal="player_entered" from="AnvilSightingDetectionArea" to="." method="_on_anvil_sighting_detection_area_player_entered"]

[editable path="Floor"]
[editable path="Scale"]
[editable path="Scale/BalanceScales"]
[editable path="Scale/BalanceScales/scales_arm"]
[editable path="Scale/BalanceScales/scales_base"]
